# clipse-gui

./: .gitignore  LICENSE  Makefile  README.md  bump_version.py  clipse-gui.py  justfile  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  stale.yml
clipse_gui/: app.py  cli.py  config_manager.py  constants.py  controller.py  data_manager.py  image_handler.py  pyproject.toml  tray_manager.py  ui_builder.py  ui_components.py  utils.py
clipse_gui/controller_mixins/: __init__.py  clipboard_mixin.py  data_mixin.py  item_ops_mixin.py  keyboard_mixin.py  list_view_mixin.py  misc_mixin.py  preview_mixin.py  scroll_mixin.py  search_mixin.py  selection_mixin.py  style_mixin.py
clipse_gui/ui/: __init__.py  detection.py  help.py  icons.py  list_row.py  preview.py  settings.py  text.py
docs/: README.md  configuration.md  getting-started.md  installation.md  keybindings.md  theming.md  tray.md  troubleshooting.md  wm-integration.md
tests/: conftest.py  test_cli.py  test_config_manager.py  test_detection.py  test_keyboard_mixin.py  test_text.py  test_utils.py
